去除无用导包，Spring Authorization Server 升级至0.3.1，JDK降级为1.8